polish #2078: Fix styling on mobile for various UIs

--- a/src/client/ui/templates/hud/styles.less
+++ b/src/client/ui/templates/hud/styles.less
@@ -166,3 +166,8 @@
 	}
 
 }
+
+.mobile .uiHud {
+	left: 5px;
+	top: 5px;
+}
