--- a/src/client/ui/templates/menu/styles.less
+++ b/src/client/ui/templates/menu/styles.less
@@ -101,8 +101,8 @@
 
 .mobile .uiMenu {
 	bottom: auto;
-	top: 10px;
-	right: 10px;
+	top: 5px;
+	right: 5px;
 	width: 64px;
 	height: 64px;
 
@@ -125,7 +125,7 @@
 		display: flex;
 		flex-direction: column;
 		height: calc(100% - 20px);
-		width: 200px;
+		width: 100px;
 		z-index: 2;
 		flex-wrap: wrap-reverse;
 		align-items: center;
