--- a/src/client/ui/templates/messages/styles.less
+++ b/src/client/ui/templates/messages/styles.less
@@ -407,8 +407,8 @@
 	}
 
 	&:not(.typing) {
-		top: 10px;
-		right: 84px;
+		top: 5px;
+		right: 74px;
 		left: auto;
 		bottom: auto;
 		width: @btnSize;
