--- a/src/client/ui/templates/spells/styles.less
+++ b/src/client/ui/templates/spells/styles.less
@@ -72,7 +72,8 @@
 
 .mobile .uiSpells {
 	top: auto;
-	bottom: 10px;
+	bottom: 5px;
+	right: 5px;
 	padding: 0px;
 	height: auto;
 	background-color: transparent;
@@ -81,7 +82,7 @@
 
 	.spell {
 		position: relative;
-		margin: 10px 0px 0px 0px;
+		margin: 5px 0px 0px 0px;
 		background-color: fade(#3a3b4a, 90%);
 		border: none;
 
